--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,12 +1,3 @@
-/*
- Theme Name:     Divi Child Theme
- Description:    Divi Child Theme
- Author:         Elegant Themes
- Author URI:     https://www.elegantthemes.com
- Template:       Divi
- Version:        1.0.0
-*/
-
 @import url("../Divi/style.css");
 
 /* =Theme customization starts here
@@ -107,15 +98,18 @@ width: 80%;
 }
 
 /*** Take out the divider line between content and sidebar ***/
-.et_pb_pagebuilder_layout.single-floorplan #main-content .container:before {background: none;}
+.et_pb_pagebuilder_layout.single-floorplan #main-content .container:before,
+.single-floorplans #main-content .container:before {background: none;}
 
 /*** Hide Sidebar ***/
-.et_pb_pagebuilder_layout.single-floorplan #sidebar {display:none;}
+.et_pb_pagebuilder_layout.single-floorplan #sidebar,
+.single-floorplans #sidebar {display:none;}
 
 
 /*** Expand the content area to fullwidth ***/
 @media (min-width: 981px){
-.et_pb_pagebuilder_layout.single-floorplan #left-area {
+.et_pb_pagebuilder_layout.single-floorplan #left-area,
+.single-floorplans #left-area {
     width: 100%;
     padding: 23px 0px 0px !important;
     float: none !important;
@@ -167,29 +161,29 @@ display: none!important;
 
 
 @media all and (max-width: 981px) {
+  .promo-slide-in{
+      z-index: 10 !important;
+  }
 
-.promo-slide-in{
-    z-index: 10 !important;
+  .promo-slide-in-content p {
+      font-size: 14px !important;
+     }
+  .promo-slide-in-button {
+      background: #fc8c85;
+      border-radius: 0px;
+      text-transform: uppercase;
+      color: #ffffff;
+      text-decoration: none!important;
+      padding: 10px 30px !important;
+      display: inline-block;
+      font-size: 12px;
+      font-weight: 400;
+      float: left;
+      margin: 0px 0 0 20px;
+      -webkit-transition: all .5s ease;
+      transition: all .5s ease;
+  }
 }
-
-.promo-slide-in-content p {
-    font-size: 14px !important;
-   }
-.promo-slide-in-button {
-    background: #fc8c85;
-    border-radius: 0px;
-    text-transform: uppercase;
-    color: #ffffff;
-    text-decoration: none!important;
-    padding: 10px 30px !important;
-    display: inline-block;
-    font-size: 12px;
-    font-weight: 400;
-    float: left;
-    margin: 0px 0 0 20px;
-    -webkit-transition: all .5s ease;
-    transition: all .5s ease;
-}}
 
 .promo-slide-in-content {
     width: 800px !important;
@@ -203,8 +197,8 @@ display: none!important;
 margin-top: -8px;
 }
 
-main-header {
-margin-top: -21px;
+#main-header {
+  margin-top: 21px;
 }
 
 
@@ -221,11 +215,9 @@ margin-top: -85px;
 margin-bottom: 20px;
 color: #a8a8a8;
 padding-bottom: 20px;
-margin-left: 10px;
 letter-spacing: 2px;
- position: relative;
-
- z-index: 5;
+position: relative;
+z-index: 5;
 }
 
 /*** Full Screen Menu ***/
@@ -319,7 +311,6 @@ opacity: 1 !important;
     text-align: center;}
 
 #breadcrumbs {
- padding-left:40px;
 margin-bottom: 0px;
 font-size: .8em;
 
@@ -339,10 +330,8 @@ font-size: 2.8em !important;
 }
 
 /*** Link Styles ***/
-a.one:link {color:#000000;
+a.one:link {
 text-decoration:underline;
-
-
 }
 
 a {
@@ -376,15 +365,27 @@ a.three:hover {color:#000000;}
 .whit-button{
 padding: 10px 30px 10px 30px;
 border-color: #000;
-  border-style: solid;
-    border-width: 1px;
-width: 50%;
+border-style: solid;
+border-width: 1px;
 text-align: center;
 
 }
 
+.info-window-right {
+	width: 80%;
+	float: right;
+	background-color: #fff;
+	padding: 90px 0 90px 45px;
+	@media all and (max-width: 981px) {
+		float: left;
+		padding: 90px 45px 90px 0;
+	}
+}
+
  .info-window-left {
-width: 50%;
+	width: 80%;
+	background-color: #fff;
+	padding: 90px 45px 90px 0;
 }
 
 /*** Full Screen Menu ***/
@@ -440,8 +441,8 @@ opacity:1;
 
 .quick-view-button:hover{
 border-color: #fff;
-  border-style: solid;
-    border-width: 1px;
+border-style: solid;
+border-width: 1px;
 color: #fff;
 background-color: #FA8D88;
 }
@@ -460,7 +461,6 @@ height: 400px;
 position: relative;}
 
 .property-hover:hover .image_overlay  {
-
 opacity:1;
 }
 
